# esp-menjin32

./: CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/dns_server/: dns_server.c
main/: CMakeLists.txt  Kconfig.projbuild  esp-menjin32.c  esp_menjin.c  idf_component.yml
main/app/: app_keys.c  app_keys.h  app_menjin.c  app_menjin.h
main/driver/: custom_i2c.c  custom_i2c.h
main/http/: http_server.c  http_server.h
main/system/: mqtt.c  mqtt.h  settings.c  settings.h  smartconfig.c  smartconfig.h
main/wifi/: captive_portal.c  captive_portal.h  smartconfig.c  webconfig.c  wifi_mgr.c  wifi_mgr.h
spiffs/: index.html
